--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-countdown-circle-timer": "^3.2.1",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
